--- a/styles/layout/_bottom-nav.scss
+++ b/styles/layout/_bottom-nav.scss
@@ -4,7 +4,40 @@
 
 .bottom-nav {
   background-color: $blue;
-  height: 144px;
+  padding: space(4) 0;
+  // height: 144px;
   background-color: $blue;
   background-image: linear-gradient(90deg, #2F6CFC 0%, #0039B7);
+}
+
+.bottom-nav__item {
+  width: 50%;
+  float: left;
+  color: $white;
+  padding: 0 space(12);
+  height: space(12);
+  display: flex;
+  align-items: center;
+
+  &--right {
+    border-left: 1px solid white;
+    justify-content: flex-start;
+  }
+
+  &--left {
+    text-align: right;
+    justify-content: flex-end;
+  }
+}
+
+.bottom-nav__inner {
+  cursor: pointer;
+}
+
+.bottom-nav__lead {
+  display: block;
+}
+
+.bottom-nav__title {
+  display: block;
 }
