--- a/styles/style.scss
+++ b/styles/style.scss
@@ -44,6 +44,7 @@
 // -------------------------
 @import 'components/buttons';
 @import 'components/hero';
+@import 'components/code-block';
 
 // Shaaaaame
 // -------------------------
