--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -46,6 +46,7 @@
 @import 'components/buttons';
 @import 'components/hero';
 @import 'components/code-block';
+@import 'components/term';
 
 
 // Examples
