--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -47,6 +47,7 @@
 @import 'components/hero';
 @import 'components/code-block';
 @import 'components/term';
+@import 'components/download-button';
 
 
 // Examples
