--- a/src/styles/layout/_bottom-nav.scss
+++ b/src/styles/layout/_bottom-nav.scss
@@ -13,7 +13,7 @@
 .bottom-nav__item {
   width: 50%;
   float: left;
-  padding: 0 space(12);
+  padding: 0 space(6);
   height: space(12);
   display: flex;
   align-items: center;
@@ -26,6 +26,10 @@
   &--left {
     text-align: right;
     justify-content: flex-end;
+  }
+
+  @include bp(medium) {
+    padding: 0 space(12);
   }
 }
 
@@ -43,4 +47,14 @@
   display: block;
   font-family: 'Antonio', $sans-serif;
   text-transform: uppercase;
+  transition: border-bottom .2s ease;
+  border-bottom: 2px solid transparent;
+
+  &:hover {
+    border-bottom: 2px solid $white;
+  }
+
+  @include bp(medium) {
+    @include typesize(2);
+  }
 }
