--- a/src/styles/layout/_homework.scss
+++ b/src/styles/layout/_homework.scss
@@ -19,6 +19,7 @@
 
 .homework__title {
   border-bottom: 0;
+  line-height: space(6);
   display: inline-block;
   margin-bottom: space(4);
   padding-bottom: 0;
