--- a/src/styles/base/_grid.scss
+++ b/src/styles/base/_grid.scss
@@ -102,10 +102,9 @@ $susy: (
   @include container($debug: false);
   height: 100%;
   margin: 0 auto;
-  padding: 0 10px;
+  padding: 0 space(1);
 
   @include bp(small) {
-    padding: 0;
     width: (map-get($breakpoints, small));
   }
 
