--- a/src/styles/base/_type.scss
+++ b/src/styles/base/_type.scss
@@ -75,7 +75,7 @@ h2,
 .h2 {
   @include typesize(2);
   margin-bottom: space(2);
-  line-height: $leading;
+  line-height: $leading * 2;
   font-family: 'Antonio', $sans-serif;
   font-weight: 300;
   text-transform: uppercase;
