--- a/src/styles/components/_download-button.scss
+++ b/src/styles/components/_download-button.scss
@@ -13,8 +13,10 @@
   line-height: 35px;
   transition: background-color .2s ease;
 
+  &:focus,
   &:hover {
     background-color: rgba(255, 255, 255, 0.2);
+    color: white;
   }
 
   &.float-left {
