adding CTA section

--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -40,6 +40,7 @@ $serif              : 'Cambria', 'Georgia', 'serif';
 $mono               : 'Lucida Console', Monaco, monospace !default;
 $base-font-family   : $sans-serif;
 $header-font-family : $sans-serif;
+$header-alt         : 'Antonio', $sans-serif;
 $base-bold-weight   : 600;
 $base-link-color    : $primary;
 $base-link-hover    : $primary-low;
