--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -40,6 +40,7 @@
 @import 'layout/footer';
 @import 'layout/bottom-nav';
 @import 'layout/homework';
+@import 'layout/cta';
 
 // Components
 // -------------------------
@@ -48,6 +49,7 @@
 @import 'components/code-block';
 @import 'components/term';
 @import 'components/download-button';
+@import 'components/download-white';
 
 
 // Examples
