--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -50,6 +50,7 @@
 @import 'components/term';
 @import 'components/download-button';
 @import 'components/download-white';
+@import 'components/tutorial-list';
 
 
 // Examples
