initial styles for 404 pages

--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -29,6 +29,11 @@
   }
 }
 
+.hero--gray {
+  background-color: #ECF1FC;
+  background-image: none;
+  text-align: left;
+}
 .hero__div {
   position: absolute;
   bottom: 0;
