--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -51,6 +51,7 @@
 @import 'components/download-button';
 @import 'components/download-white';
 @import 'components/tutorial-list';
+@import 'components/404';
 
 
 // Examples
