--- a/src/styles/layout/_side.scss
+++ b/src/styles/layout/_side.scss
@@ -9,13 +9,17 @@ $_circle-active-color-1: #FFC73D;
 $_circle-active-color-2: #FF722A;
 
 .side {
-  @include span(3);
+  @include span(4);
   border-right: 1px solid #EDEDED;
   padding-bottom: space(4);
   display: none;
 
   @include bp(medium) {
     display: block;
+  }
+
+  @include bp(large) {
+    @include span(3);
   }
 }
 
