--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -52,6 +52,7 @@
 @import 'components/download-white';
 @import 'components/tutorial-list';
 @import 'components/404';
+@import 'components/img-caption';
 
 
 // Examples
