Adding video module.

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -53,6 +53,7 @@
 @import 'components/tutorial-list';
 @import 'components/404';
 @import 'components/img-caption';
+@import 'components/video';
 
 
 // Examples
